--- a/src/pages/ModuleDetailsPage/ModuleDetailsPage.css
+++ b/src/pages/ModuleDetailsPage/ModuleDetailsPage.css
@@ -1,7 +1,7 @@
 .moduleDetailsContainer {
     position:relative;
     top: 70px;
-    height: calc(100vh - 70px);
+    min-height: calc(100vh-70px);
     width: 100vw;
     background-color: black;
     background-size: cover;
@@ -63,7 +63,6 @@
     background-color: white;
     border: solid black 1px;
     padding: 15px 60px 15px 60px;
-    min-height: 65%;
     max-height: 65%;
 }
 
@@ -76,7 +75,7 @@
     border: black solid 1px;
     min-width: 50%;
     background-color: rgb(193, 224, 235);
-    height: calc(100vh - 112px)
+    height: auto
 }
 
 .detailsContainer > p {
